# pxr_rs

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  deny.toml
.devcontainer/: devcontainer.json
.docker/: join.bash  run.bash
.github/workflows/: rust.yml
pxr/: Cargo.toml
pxr/src/: lib.rs
pxr/src/utils/: error.rs  result.rs
pxr_build/: Cargo.toml
pxr_build/src/: lib.rs
pxr_build/src/codegen/: mod.rs
pxr_build/src/codegen/vt/: mod.rs  value.rs
pxr_build/src/utils/: codegen.rs  format.rs  mod.rs  string.rs
pxr_sys/: Cargo.toml  build.rs
pxr_sys/include/pxr_sys/: pxr.h
pxr_sys/patches/include/pxr/usd/sdf/: fileFormat.h.patch  layer.h.patch
pxr_sys/patches/include/pxr/usd/usd/: apiSchemaBase.h.patch  prim.h.patch  primTypeInfo.h.patch  property.h.patch
pxr_sys/patches/include/pxr/usd/usdPhysics/: rigidBodyAPI.h.patch
pxr_sys/patches/include/pxr/usd/usdShade/: input.h.patch  material.h.patch  output.h.patch  utils.h.patch
pxr_sys/patches/src/build_scripts/: build_usd.py.patch
pxr_sys/src/: lib.rs
pxr_sys/src/ffi/: bindings.rs  mod.rs
pxr_sys/src/ffi/pxr/: mod.rs
pxr_sys/src/ffi/pxr/sdf/: cleanup_enabler.rs  layer.rs  mod.rs  path.rs  value_type_name.rs
pxr_sys/src/ffi/pxr/tf/: token.rs
pxr_sys/src/ffi/pxr/usd/: api_schema_base.rs  attribute.rs  collection_api.rs  mod.rs  prim.rs  prim_composition_query.rs  prim_range.rs  property.rs  relationship.rs  stage.rs  stage_cache.rs  stage_cache_context.rs
pxr_sys/src/ffi/pxr/usd_geom/: geom_xform.rs  mod.rs
pxr_sys/src/ffi/pxr/usd_physics/: articulation_root_api.rs  collision_api.rs  drive_api.rs  filtered_pairs_api.rs  joints.rs  limit_api.rs  mass_api.rs  material_api.rs  mesh_collision_api.rs  mod.rs  rigid_body_api.rs
pxr_sys/src/ffi/pxr/usd_shade/: material_binding_api.rs  mod.rs  output.rs
pxr_sys/src/ffi/pxr/usd_utils/: mod.rs  sparse_value_writer.rs  stage_cache.rs
pxr_sys/src/ffi/pxr/vt/: dictionary.rs  mod.rs  value.rs  value_string.rs
pxr_sys/src/macros/: extern_type.rs  mod.rs  pinned_deref.rs  vector_element.rs
pxr_sys/src/utils/: path.rs
pxr_sys/tests/: vt_value.rs
