[workspace]
members = [
    # Rust interface for OpenUSD
    "pxr",
    # Helper crate for building OpenUSD bindings
    "pxr_build",
    # Unsafe Rust bindings for OpenUSD
    "pxr_sys",
]
resolver = "2"

[workspace.package]
authors = ["Andrej Orsula <orsula.andrej@gmail.com>"]
categories = ["rendering::data-formats", "simulation"]
description = "Rust interface for OpenUSD"
edition = "2021"
keywords = ["pxr", "usd", "vfx", "simulation"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AndrejOrsula/pxr_rs"
rust-version = "1.70"
version = "0.1.0"

[workspace.dependencies]
pxr_build = { path = "pxr_build", version = "0.1.0" }
pxr_sys = { path = "pxr_sys", version = "0.1.0" }

anyhow = { version = "1.0" }
autocxx = { version = "0.26" }
autocxx-build = { version = "0.26" }
built_different = { version = "0.1" }
cpp = { version = "0.5" }
cpp_build = { version = "0.5" }
cxx = { version = "1.0", default_features = false, features = ["std", "c++17"] }
cxxbridge-flags = { version = "1.0", default_features = false }
half = { version = "2" }
python-config-rs = { version = "0.1" }
regex = { version = "1.10" }
thiserror = { version = "1.0" }
walkdir = { version = "2" }
which = { version = "5.0" }


[patch.crates-io]
# Until https://github.com/rust-lang/rust-bindgen/pull/2423 is merged into autocxx-bindgen
autocxx-bindgen = { git = "https://github.com/AndrejOrsula/autocxx_bindgen", branch = "fix_union_template" }
# Adds `use_cxx11_abi` feature that allows enabling/disabling CXX11 ABI during compilation (for C++ std::string compatibility)
cxx = { git = "https://github.com/AndrejOrsula/cxx", branch = "dev_pxr" }
# (ugly hack) Includes hardcoded allowlist for double underscore identifiers - __pxrReserved__ namespace
cxx-gen = { git = "https://github.com/AndrejOrsula/cxx", branch = "dev_pxr" }
# (ugly hack) Includes hardcoded allowlist for double underscore identifiers - __pxrReserved__ namespace
autocxx-engine = { git = "https://github.com/AndrejOrsula/autocxx", branch = "dev_pxr" }
